--- a/tfe_principal.tex
+++ b/tfe_principal.tex
@@ -73,7 +73,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc} % Usa codificación 8-bit que tiene 256 glyphs
 
-\usepackage[dvipsnames]{xcolor}
+% \usepackage[dvipsnames]{xcolor}
 \usepackage{pdfpages}
 \usepackage{natbib}
 
@@ -548,7 +548,7 @@ linewidth=4pt]{mBox}
 
 \rule[1.7mm]{2cm}{0.5mm}
 \hfill
-\textsc{\Large TRABAJO FIN DE ESTUDIOS} 
+\textsc{\Large TRABAJO FIN DE GRADO} 
 \hfill
 \rule[1.7mm]{2cm}{0.5mm} 
 \\[0.75cm]
