--- a/bib/library.bib
+++ b/bib/library.bib
@@ -6,6 +6,13 @@
   howpublished = {Disponible en \url{http://destio.us.es/calvo}}
 }
 
+@Manual{Luque2019,
+  title = {Cómo crear Tablas de información en R Markdown},
+  author = {Pedro L. Luque-Calvo},
+  year = "2019",
+  howpublished = {Disponible en \url{http://destio.us.es/calvo}}
+}
+
 @Manual{R-base,
   title = {R: A Language and Environment for Statistical
     Computing},
@@ -74,6 +81,7 @@
 @Misc{Techopedia,
   title = {"Definition - What does Business Intelligence (BI) mean?"},
   author = {Techopedia},
+  year = "2017",
   howpublished = {Disponible en \url{https://www.techopedia.com/definition/345/business-intelligence-bi}}
 }
 
