--- a/portadas/latex_paginatitulo_modTFE.tex
+++ b/portadas/latex_paginatitulo_modTFE.tex
@@ -19,7 +19,7 @@
 %----------------------------------------------------------------------------------------
 %	HEADING SECTIONS
 %----------------------------------------------------------------------------------------
-\textsc{\LARGE Grado en Estadística}\\[2.5cm] 
+\textsc{\LARGE Grado ...}\\[2.5cm] 
 
 
 %----------------------------------------------------------------------------------------
@@ -28,7 +28,7 @@
 
 \rule[1.7mm]{2cm}{0.5mm}
 \hfill
-\textsc{\Large TRABAJO FIN DE GRADO} 
+\textsc{\Large TRABAJO FIN DE ESTUDIOS} 
 \hfill
 \rule[1.7mm]{2cm}{0.5mm} 
 \\[0.75cm]
@@ -36,9 +36,9 @@
 %\bfseries
 {\Huge
 \textbf{\textit{
-Influencia de las delimitaciones \\[0.2cm]
-de las circunscripciones \\[0.5cm]
-en los resultados electorales
+Introducción a \\[0.2cm]
+la Estadística Aplicada \\[0.5cm]
+con ayuda de R
 }}}\\[0.75cm] 
 
 \HRule \\[4cm]
@@ -46,10 +46,10 @@ en los resultados electorales
 
 {\Large
 
-Angel González Rizo} \\[0.5cm]
+Marta García Moreno} \\[0.5cm]
 
 {\large
-Sevilla, Junio de 2019
+Sevilla, Octubre de 2017
 }
 
 \end{minipage}
