--- a/modelos/tfe_principal_modelo.Rmd
+++ b/modelos/tfe_principal_modelo.Rmd
@@ -1,73 +1,86 @@
 ---
-#title: "TFM"
-author: "Nombre Completo Autor"
-date: "27/10/2017"
 documentclass: book
-classoption: a4paper
-#classoption: a4paper,oneside
-#bibliography: bib/library.bib
-bibliography: ["bib/library.bib", "bib/paquetes.bib"]
-#csl: methods-in-ecology-and-evolution.csl
-csl: acm-sig-proceedings-long-author-list.csl
-urlcolor: blue #black
-linkcolor: blue #black
-link-citations: yes
+principal: true
+forprint: true  # true: imprime a dos caras, false: libro digital
 fontsize: 12pt # 10pt,11pt
-geometry: margin = 2.5cm
+geometry: margin = 2.5cm 
+bibliography: ["bib/library.bib", "bib/paquetes.bib"]
+# metodobib -> true: natbib (descomentar: citation_package: natbib) 
+#           -> false: pandoc (comentar: citation_package: natbib)
+metodobib: true
+#natbib: plainnat, abbrvnat, unsrtnat
+biblio-style: "plainnat"
+#Método 2 (pandoc): descomente una línea de las 2 siguientes en caso de usarlo
+csl: methods-in-ecology-and-evolution.csl      # no numera mejor en las citas
+#csl: acm-sig-proceedings-long-author-list.csl  # numera peor en las citas
+link-citations: yes
 output: 
-  pdf_document: 
+  pdf_document:
     keep_tex: no
     number_sections: yes
-#    toc: yes
+    citation_package: natbib  # comentado usa: pandoc-citeproc
+    #toc: yes
     fig_caption: yes
+    template: latex/templateMemoriaTFE.tex
     includes:
-      in_header: latex/latex_preambulo.tex
       before_body: portadas/latex_paginatitulo_modTFE.tex
 #      before_body: portadas/latex_paginatitulo_modTFGE.tex
 #      before_body: portadas/latex_paginatitulo_modTFGM.tex
 #      before_body: portadas/latex_paginatitulo_modTFDGME.tex
 #      before_body: portadas/latex_paginatitulo_modTFMDS.tex
 #      before_body: portadas/latex_paginatitulo_mod_OV01.tex
-      after_body: latex/latex_antes_enddoc.tex
+      #in_header: latex/latex_preambulo.tex
+      #after_body: latex/latex_antes_enddoc.tex
 ---
 
 ---
 nocite: | 
+  @Luque2017,@Luque2019,@RStudio,@R-base,
   @R-knitr,@R-rmarkdown,@R-dplyr,@R-ggplot2, @R-xtable,
-  @R-stringr,@Techopedia,@Pentaho2
+  @R-stringr,@Techopedia
 ...
 
 
 ```{r global_options, include=FALSE}
+Sys.setlocale('LC_ALL','C') # corrige problema con 
+options(kableExtra.latex.load_packages = F)
+#options(tinytex.latexmk.emulation = FALSE)
 knitr::opts_chunk$set(fig.path = 'figurasR/',
-                      echo = FALSE, warning = FALSE, message = FALSE,
+                      echo = TRUE, warning = FALSE, message = FALSE,
                       fig.pos="H",fig.align="center",out.width="95%",
-                      cache=FALSE)
-
+                      cache=FALSE) # 
 knitr::write_bib(c("knitr","rmarkdown","dplyr","ggplot2","xtable",
                    "stringr","shiny","flexdashboard","htmlwidgets","bookdown"),
                  file="bib/paquetes.bib", width = 60)
 ```
 
 
+<!-- Indentar el texto al inicio de cada nuevo párrafo -->
+\setlength{\parindent}{1em}
 
 \pagestyle{fancy}
+\ifdefined\ifdoblecara
 \fancyhead[LE,RO]{}
 \fancyhead[LO,RE]{}
+\else
+\fancyhead[RO]{}
+\fancyhead[LO]{}
+\fi
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 \pagenumbering{roman}
 
 \setcounter{tocdepth}{4}
+\subpdfbookmark{Índice General}{indice}
 \tableofcontents
 
 
 \cleardoublepage   
 <!--  \clearpage -->
-\section*{Agradecimientos}
-\addcontentsline{toc}{section}{Agradecimientos}
+\section*{Prólogo}
+\addcontentsline{toc}{section}{Prólogo}
 
-```{r child = 'agradecimientos.Rmd'}
+```{r child = 'prologo.Rmd'}
 ```
 
 
@@ -89,27 +102,33 @@ knitr::write_bib(c("knitr","rmarkdown","dplyr","ggplot2","xtable",
 
 
 \cleardoublepage   
-<!--  \clearpage -->
 \listoffigures
 \addcontentsline{toc}{section}{Índice de Figuras}
 
 \cleardoublepage   
-<!--  \clearpage -->
+
 \listoftables
 \addcontentsline{toc}{section}{Índice de Cuadros}
 
 
 \cleardoublepage   
-<!--  \clearpage -->
+
 \pagenumbering{arabic}
 
+\ifdefined\ifdoblecara
 \fancyhead[LE,RO]{\scriptsize\rightmark}
 \fancyfoot[LO,RE]{\scriptsize\slshape \leftmark}
 \fancyfoot[C]{}
 \fancyfoot[LE,RO]{\footnotesize\thepage}
+\else
+\fancyhead[RO]{\scriptsize\rightmark}
+\fancyfoot[LO]{\scriptsize\slshape \leftmark}
+\fancyfoot[C]{}
+\fancyfoot[RO]{\footnotesize\thepage}
+\fi
+
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
-
 
 ```{r child = 'capitulo01.Rmd'}
 ```
@@ -131,6 +150,13 @@ knitr::write_bib(c("knitr","rmarkdown","dplyr","ggplot2","xtable",
 
 \FloatBarrier
 
+<!-- Borrarlo o comentarlo para obtener la versión final: contiene utilidades -->
+```{r child = 'capitulo05.Rmd'}
+```
+
+
+\FloatBarrier
+
 \appendix
 
 ```{r child = 'apendice01.Rmd'}
@@ -143,9 +169,32 @@ knitr::write_bib(c("knitr","rmarkdown","dplyr","ggplot2","xtable",
 
 
 \FloatBarrier
-\cleardoublepage   
-<!--  \clearpage -->
+\cleardoublepage
 
-\fancyhead[CO,CE]{Bibliografía}
+\ifdefined\ifdoblecara
+  \fancyhead[LE,RO]{}
+  \fancyfoot[LO,RE]{}
+  \fancyhead[CO,CE]{Bibliografía}
+\else
+  \fancyhead[RO]{}
+  \fancyfoot[LO]{}
+  \fancyhead[CO]{Bibliografía}
+\fi
 
-# Bibliografía
+
+\ifdefined\ifcitapandoc
+
+\hypertarget{bibliografuxeda}{%
+\chapter*{Bibliografía}\label{bibliografuxeda}}
+\addcontentsline{toc}{chapter}{Bibliografía}
+
+
+\else
+
+
+<!-- \nocite{*} -->
+\nocite{Luque2017,Luque2019,RStudio,R-base,
+R-knitr,R-rmarkdown,R-dplyr,R-ggplot2, R-xtable,
+R-stringr,Techopedia}
+
+\fi 
