--- a/bib/paquetes.bib
+++ b/bib/paquetes.bib
@@ -2,16 +2,16 @@
   title = {bookdown: Authoring Books and Technical Documents
     with R Markdown},
   author = {Yihui Xie},
-  year = {2019},
-  note = {R package version 0.14},
+  year = {2020},
+  note = {R package version 0.17},
   url = {https://CRAN.R-project.org/package=bookdown},
 }
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel
     Henry and Kirill Müller},
-  year = {2019},
-  note = {R package version 0.8.3},
+  year = {2020},
+  note = {R package version 0.8.4},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 @Manual{R-flexdashboard,
@@ -45,8 +45,8 @@
   title = {knitr: A General-Purpose Package for Dynamic Report
     Generation in R},
   author = {Yihui Xie},
-  year = {2019},
-  note = {R package version 1.25},
+  year = {2020},
+  note = {R package version 1.28},
   url = {https://CRAN.R-project.org/package=knitr},
 }
 @Manual{R-rmarkdown,
@@ -55,8 +55,8 @@
     and Javier Luraschi and Kevin Ushey and Aron Atkins and
     Hadley Wickham and Joe Cheng and Winston Chang and Richard
     Iannone},
-  year = {2019},
-  note = {R package version 1.16},
+  year = {2020},
+  note = {R package version 2.1},
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 @Manual{R-shiny,
@@ -82,4 +82,54 @@
   year = {2019},
   note = {R package version 1.8-4},
   url = {https://CRAN.R-project.org/package=xtable},
+}
+@Book{bookdown2016,
+  title = {bookdown: Authoring Books and Technical Documents
+    with {R} Markdown},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2016},
+  note = {ISBN 978-1138700109},
+  url = {https://github.com/rstudio/bookdown},
+}
+@Book{ggplot22016,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2016},
+  isbn = {978-3-319-24277-4},
+  url = {https://ggplot2.tidyverse.org},
+}
+@Book{knitr2015,
+  title = {Dynamic Documents with {R} and knitr},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2015},
+  edition = {2nd},
+  note = {ISBN 978-1498716963},
+  url = {https://yihui.org/knitr/},
+}
+@InCollection{knitr2014,
+  booktitle = {Implementing Reproducible Computational
+    Research},
+  editor = {Victoria Stodden and Friedrich Leisch and Roger D.
+    Peng},
+  title = {knitr: A Comprehensive Tool for Reproducible
+    Research in {R}},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  year = {2014},
+  note = {ISBN 978-1466561595},
+  url = {http://www.crcpress.com/product/isbn/9781466561595},
+}
+@Book{rmarkdown2018,
+  title = {R Markdown: The Definitive Guide},
+  author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2018},
+  note = {ISBN 9781138359338},
+  url = {https://bookdown.org/yihui/rmarkdown},
 }
