--- a/capitulo01.Rmd
+++ b/capitulo01.Rmd
@@ -1,6 +1,6 @@
 ---
-author: "Nombre Completo Autor"
-date: "27/10/2017"
+author: "Angel Gonzalez Rizo"
+date: "2020"
 documentclass: book
 forprint: true  # true: imprime a dos caras, false: libro digital
 fontsize: 12pt # 10pt,11pt
