--- a/capitulo01.Rmd
+++ b/capitulo01.Rmd
@@ -70,6 +70,9 @@ knitr::opts_chunk$set(fig.path = 'figurasR/',
 \renewcommand{\footrulewidth}{0.4pt}
 
 
-# Título del Capítulo
+# Una introduccion a los sistemas de votacion
 
-## Primera sección
+## Origenes
+
+La
+
