--- a/capitulo01.Rmd
+++ b/capitulo01.Rmd
@@ -79,7 +79,10 @@ Según la Real Academia de la lengua Española votar proviene de la palabra lati
 
 ### Significado
 
-En su primera acepcion en el diccionario de la Real Academia Española define votar como: "Dicho de una persona: Dar su voto o decir su dictamen en una reunión o cuerpo deliberante, o en una elección de personas " 
+En su primera acepcion en el diccionario de la Real Academia de la lengua Española define votar como: "Dicho de una persona: Dar su voto o decir su dictamen en una reunión o cuerpo deliberante, o en una elección de personas." 
 
 Para terminar de definir mejor el término buscamos la definición en el diccionario del español jurídico, en el cual en la primera acepcion nos resulta útil para la delimitación del término que queremos definir, en su primera acepción lo define como: "Dicho de una persona: Dar su voto o decir su dictamen en una reunión o cuerpo deliberante, o en una elección de personas." 
 
+### ¿Votación o sufragio?
+
+Las dos palabras son sinónimas, aunque en la segunda acepción de la palabra sufragio según la Real Academia de la lengua: "Sistema electoral para la provisión de cargos" nos referimos más al voto como sistema, y en el voto se entiende más como referencia a la persona.
