sist elect esp-origenes

--- a/capitulo01.Rmd
+++ b/capitulo01.Rmd
@@ -85,4 +85,38 @@ Para terminar de definir mejor el término buscamos la definición en el diccion
 
 ### ¿Votación o sufragio?
 
-Las dos palabras son sinónimas, aunque en la segunda acepción de la palabra sufragio según la Real Academia de la lengua: "Sistema electoral para la provisión de cargos" nos referimos más al voto como sistema, y en el voto se entiende más como referencia a la persona.
+Las dos palabras son sinónimas, aunque en la segunda acepción de la palabra sufragio según la Real Academia de la lengua: "Sistema electoral para la provisión de cargos" nos referimos más al voto como sistema, y en el voto se entiende más como referencia a la persona que realiza el acto de votar.
+A lo largo del trabajo trataremos indistintamente ambos términos.
+
+
+## Sistema electoral en España
+
+### Orígenes 
+
+El origen de el sistema electoral español se remonta a principios del siglo XIX, en una España invadida por el ejército de Napoleón. El vacío de poder facilitó la convocatoria de una asamblea nacional, las cortes, en la ciudad de Cádiz con diputados venidos de todas las regiones tanto de la península como de ultramar. La asamblea concluyó con la promulgación de la constitución de 1812.
+
+En la instruccion de 1810 comienzan a a parecer los mecanismos para elegir a los representantes tanto parroquiales, de partido y de provincia. La fórmula electoral escogida fué la mayoritaria. El sufragio es masculino universal e indirecto, aunque se requería que los electores ejerciesen algún tipo de industria.
+Ya en la constitución de 1812 se reguló todo el proceso electoral en los artículos 27 a 103, se determinó una distrubución de 1 diputado por cada 70.000 personas.
+
+Formalmente las leyes que regulan el derecho de sufragio se remontan a 1837, estableciéndose en el año 1869 el sufragio universal consolidado en 1907 por ley.
+
+### 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
