--- a/capitulo01.Rmd
+++ b/capitulo01.Rmd
@@ -73,7 +73,7 @@ knitr::opts_chunk$set(fig.path = 'figurasR/',
 
 ## Objetivos
 
-Rev-El objetivo del presente trabajo será analizar los distintos sistemas de votación que existen en la actualidad que puedan ser aplicados actualmente en España, aplicar estos sistemas a España, indicando sus ventajas e inconvenientes y proponer nuevos sistemas de votación o reparto para una eventual reforma de la Ley Orgánica del Régimen Electoral
+Rev-El objetivo del presente trabajo será analizar los distintos sistemas de votación que existen en la actualidad que puedan ser aplicados actualmente en España, aplicar estos sistemas a España, indicando sus ventajas e inconvenientes y proponer nuevos sistemas de votación o reparto para una eventual reforma de la Ley Orgánica del Régimen Electoral.
 
 ## ¿Qué significa votar?
 
@@ -108,10 +108,47 @@ Formalmente las leyes que regulan el derecho de sufragio se remontan a 1837, est
 
 El sistema actual español se rige bajo tres normas, en primer lugar la misma constitución de 1978, y mas tarde la Ley Orgánica del Régimen Electoral Central 5/1985, de 19 de Junio, en donde se regula las elecciones al Parlamento Europeo, al Congreso y Senado y las elecciones de los municipiosy la del 2/2011, del 28 de Enero en donde se modifica la anterior Ley Orgánica. 
 
+### Descripción del sistema Electoral Español
 
+La descripción del sistema Electoral Español se encuentra el la LOREG (Ley Orgánica del Régimen Electoral Español)
+En el caso de España debemos diferenciar la elección de Diputados y Senadores, cada provincia es considerada como una circunscripción electoral. Como excepción a la regla las ciudades de Ceuta y Melilla son consideradas cada una de ellas como una circusncripción electoral.
+En el artículo 161.2 se nos añade otra excepción para la elección de Senadores en donde se consideran circunscripciones las siguientes islas o agrupaciones de islas: Mallorca, Menorca, Ibiza-Formentera, Gran Canaria, Fuerteventura, Lanzarote, Tenerife, Hierro, Gomera y La Palma.
 
+## Congreso
 
+### Número diputados
 
+- El congreso está formado por un número fijo de diputados, 350.
+- Cada una de las provincias les corresponden inicialmente al menos dos diputados, excepto las excepciones anteriormente anunciadas, donde Ceuta y Melilla están representadas por un diputado cada una de ellas.
+- Los 248 diputados restantes se distribuyen entre las provincias proporcionalmente a su  población según el siguiente método:
+
+    1. $\textrm{Cuota de Reparto} = \frac{248}{\text{Total de la poblaci\'{o}n de derecho de las provincias peninsulares e insulares}}$
+      
+      
+      
+    2. $\textrm{Diputados} = \text{Entero} \left\{\frac{\text{Población de derecho provincial}}{\text{Cuota de Reparto}}\right\}$
+      
+      
+    3. Diputados Restantes = 348 - Número Diputados paso 2  
+       Diputados Totales = Diputados + Restantes, uno a cada una de las provincias cuyo cociente, obtenido conforme al punto anterior, tenga una fracción decimal mayor. 
+
+### Reparto de Escaños
+
+- Se aplica la llamada ley D´Hont
+
+- No se tienen en cuenta aquellas candidaturas que no hubieran obtenido, al menos, el 3% de los votos válidos emitidos en la circunscripción.
+
+-  Se ordenan de mayor a menor, en una columna, las cifras de votos obtenidos por las restantes candidaturas.
+
+-  Se divide el número de votos obtenidos por cada candidatura por 1, 2, 3, etc., hasta un número igual al de escaños correspondientes a la circunscripción. Los escaños se atribuyen a las candidaturas que obtengan los cocientes mayores, atendiendo a un orden decreciente.
+
+    +  Cuando en la relación de cocientes coincidan dos correspondientes a distintas candidaturas, el escaño se atribuirá a la que mayor número total de votos hubiese obtenido.
+
+- Los escaños correspondientes a cada candidatura se adjudican a los candidatos incluidos en ella, por el orden de colocación en que aparezcan.
+
+- En las circunscripciones de Ceuta y Melilla será proclamado electo el candidato que mayor número de votos hubiese obtenido.
+
+## Senado
 
 
 
