--- a/capitulo01.Rmd
+++ b/capitulo01.Rmd
@@ -111,7 +111,7 @@ El sistema actual español se rige bajo tres normas, en primer lugar la misma co
 ### Descripción del sistema Electoral Español
 
 La descripción del sistema Electoral Español se encuentra el la LOREG (Ley Orgánica del Régimen Electoral Español)
-En el caso de España debemos diferenciar la elección de Diputados y Senadores, cada provincia es considerada como una circunscripción electoral. Como excepción a la regla las ciudades de Ceuta y Melilla son consideradas cada una de ellas como una circusncripción electoral.
+En el caso de España debemos diferenciar la elección de Diputados y Senadores, cada provincia es considerada como una circunscripción electoral. Como excepción a la regla las ciudades de Ceuta y Melilla son consideradas cada una de ellas como una circunscripción electoral.
 En el artículo 161.2 se nos añade otra excepción para la elección de Senadores en donde se consideran circunscripciones las siguientes islas o agrupaciones de islas: Mallorca, Menorca, Ibiza-Formentera, Gran Canaria, Fuerteventura, Lanzarote, Tenerife, Hierro, Gomera y La Palma.
 
 ### Congreso
@@ -164,6 +164,51 @@ En el artículo 161.2 se nos añade otra excepción para la elección de Senador
 
     b) Serán proclamados electos aquellos candidatos que obtengan mayor número de votos hasta complementar el de Senadores asignados a la circunscripción.
 
+
+## Métodos de reparto de escaños
+
+A continuación presentaremos los distintos métodos de reparto de escaños
+Paquete Electoral
+
+### Ley D´Hont
+
+La ley D´Hont lleva el nombre del matemático y jurista belga Victor D´Hont , el cual describió la metodología en el año 1878 en su libro *"La représentation proportionnelle des partis par un électeur"*. [^3.1]
+
+[^3.1]: Puede leerse el línea el segundo libro del autor: *"Système pratique et raisonné de représentation proportionelle"* en  http://mat.uab.cat/~xmora/bibliografia/DHondt1882.pdf
+
+Se trata de un método de promedio mayor, utilizado para asignar los escaños usualmente en sistemas de listas. Es un sistema que trata de asignar los escaños aproximados al número de votos recibidos y que incentiva las coaliciones de partidos.  
+Es el sistema más habitualmente utilizado en las democracias actuales.
+
+#### Reparto
+
+Una vez escrutados la totalidad de los votos, se calculan cocientes según la fórmula:  
+
+$\textrm{Cociente} = \frac{V}{s+1}$  donde:  
+
+$V$: Representa el número total de votos recibidos por la lista.  
+
+$s$: Representa el número de escaños que cada lista se ha llevado de momento, inicialmente 0 para cada lista.  
+
+El número de votos recibidos por cada lista se divide primero por 1, después por 2, 3, hasta el número total de escaños para ese distrito.
+
+
+
+
+### Método Sainte-Laguë
+### Método Huntington-Hill
+
+### Cuota Hagenbach-Bischoff
+### Método de cifra repartidora
+### Método de Condorcet
+### Método de promedios mayores
+### Método del resto mayor
+#### Cociente Hare
+#### Cociente Droop
+#### Cociente Imperiali
+
+### Método Schulze
+### Regla de Hamilton
+### Representación proporcional de la lista de partidos
 
 
 
