--- a/capitulo01.Rmd
+++ b/capitulo01.Rmd
@@ -219,6 +219,28 @@ $\textrm{Cociente} = \frac{V}{1.4}$
 
 
 ### Método Huntington-Hill
+
+Método creado en 1920 por Joseph Hill y corregido por el compañero de escuela de Hill, Edward Huntington. Es un método en el que se elige el tamaño de la cámara.  
+El objetivo es mantener la relación de "una persona un voto" lo más cercana posible a 1.
+
+#### Método
+
+$\textrm{D} = \frac{Población Total}{NúmeroTotalDiputados}$
+
+Calcular la cuota de diputados por estado:  
+
+$\textrm{CoutaEstado} = \frac{Población Estado}{D}$
+
+Redondeamos la cuota a la parte entera.  
+
+$\textrm{n} = ParteEntera\left\{{Cuota Estado}\right\}$
+
+Comparar la Cuota del estado con la media geométrica de $n$ y $n+1$, $\sqrt{n(n+1)}$
+
+Si $\begin{cases}CuotaEstado>MediaGeométrica & Representantes = n+1\\\textrm{Caso Contrario} & Representantes = n\end{cases}$
+
+Ajustar D para que el número de asientos totales coincida con el número total de asientos designados.
+
 ### Cuota Hagenbach-Bischoff
 
 Fórmula utilizada en los sistemas de representación proporcional para un sistema de listas electorales. Su nombre proviene del inventor suizo, profesor de física y matemáticas Eduard Hagenbach-Bischoff (1833–1910). 
